# echo

./: .dockerignore  .gitignore  .railwayignore  APP_STORE_LISTING.md  Dockerfile  HARDWARE_ARRIVES.md  README.md  pyproject.toml  railway.env.example  railway.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml  model-training.yml
configs/: README.md  conformer_gpu.yaml
docs/: api-reference.md  architecture.md  data-collection-protocol.md  gpu_training_guide.md  hardware-setup.md
emg-asl/: .gitignore  APP_STORE_LISTING.md  README.md  docker-compose.yml  requirements-live.txt  requirements.txt  start-server.sh
emg-asl/configs/: cross_modal_wlasl.yaml  lstm_default.yaml
emg-asl/docs/: model_card.md  privacy.html  railway_deployment.md  vision_teacher_guide.md
emg-asl/hardware/: README.md
emg-asl/models/: asl_emg_classifier.onnx
emg-asl/notebooks/: 01_quick_start.ipynb  02_model_evaluation.ipynb  02_model_training.ipynb  03_model_comparison.ipynb
emg-asl/scripts/: augmentation_demo.py  benchmark_models.py  calibrate_quick.py  calibrate_user.py  demo_pipeline.py  deploy.sh  download_wlasl.py  export_coreml.py  live_translate.py  prepare_ninapro.py  record_paired_session.py  sync_models.sh  test_websocket.py  train_conformer_baseline.py  train_cross_modal.py  train_real.py  train_svm_baseline.py  validate_session.py  verify_paired_data.py
emg-asl/src/: constants.py
emg-asl/tests/: conftest.py  test_pipeline.py
experiments/: agent_demo.py  buad304_agent.py
frontend/: .gitignore  README.md  package-lock.json  package.json
hardware/: README.md
mobile/: babel.config.js  package-lock.json  package.json  tsconfig.json
models/: asl_emg_classifier.onnx  asl_emg_classifier.onnx.data
notebooks/: 01_data_exploration.ipynb  README.md
scripts/: auto_label_session.py  deploy_railway.sh  download_artifact.py  download_datasets.sh  evaluate.py  evaluate_model.py  extract_wlasl_landmarks.py  live_translate.py  optuna_hpo.py  prepare_asla.py  prepare_grabmyo.py  prepare_italian_sl.py  prepare_mendeley_asl.py  preprocess.py  record_session.py  run_full_pipeline.sh  smoke_test.py  train_cnn_lstm_baseline.py  train_dtw.py  train_dyfav.py  train_gpu_ddp.py  train_pose_classifier.py  train_synthetic_baseline.py  upload_artifact.py
src/: constants.py
tests/: test_features.py  test_filters.py  test_models.py
(+105 files in other folders)
