[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# =============================================================================
# Ruff — fast Python linter
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]       # scripts use sys.path manipulation before imports
"tests/**/*.py" = ["F811"]   # allow fixture redefinitions in tests

# =============================================================================
# Black — opinionated Python formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.venv
  | venv
  | build
  | dist
)/
'''

# =============================================================================
# mypy — static type checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
]

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage (used by pytest-cov)
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
